# Personal_Assistant

./: Dockerfile  Procfile  README.md  example.env  main.py  pyproject.toml  readme_al  requirements.txt
contacts/: models.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_contact_ed_info.py  0002_initial.py
contacts/templates/contacts/: contact_list.html
fileshare/: forms.py  models.py
fileshare/migrations/: 0001_initial.py  0002_initial.py
fileshare/templates/: file_list.html
latest_news/: __init__.py  apps.py  signals.py  views.py
latest_news/migrations/: 0001_initial.py  0002_remove_news_row_id_alter_news_id.py
latest_news/templates/: index.html  new_details.html  our_team.html
latest_news/utils/: news_parser.py  updater.py
migrations/: 0001_initial.py
notes/: views.py
notes/migrations/: 0001_add_tags_notes.py  0001_initial.py  0002_initial.py  0002_note_title.py
personal_assistant/: asgi.py  example.env  settings.py  urls.py  wsgi.py
personal_assistant/contacts/: forms.py  models.py  urls.py  views.py
personal_assistant/fileshare/: forms.py  models.py  urls.py  views.py
personal_assistant/latest_news/: apps.py  models.py  urls.py  views.py
personal_assistant/notes/: forms.py  models.py  urls.py  views.py
personal_assistant/personal_assistant/: settings.py  urls.py
personal_assistant/templates/: base.html
personal_assistant/users/: forms.py  models.py  urls.py  views.py
static/styles/: style.css
staticfiles/styles/: mbrs_add.css
users/: forms.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py
(+55 files in other folders)
