[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = ""
authors = ["PYOrm <ormagedon2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
sqlalchemy = "^2.0.32"
crispy-bootstrap4 = "^2024.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
